<resources>
    <!-- Project -->
    <string name="app_name">IN5600-AutoInsurance</string>
    <string name="company">AutoInsurance</string>
    <string name="app_package">no.uio.ifi.oscarlr.in5600_autoinsurance</string>

    <!-- LoginActivity -->
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="button_txt_login">Login</string>
    <string name="skip_login">Skip login</string>

    <!-- HomeFragment -->
    <string name="new_insurance_claim_home">New insurance claim</string>
    <string name="see_existing_insurance_claims_home">See existing insurance claims</string>
    <string name="no_claims_available_home">No claims available</string>
    <string name="floating_action_button_home">Add new claim</string>

    <!-- ProfileFragment -->
    <string name="log_out_profile">Logout</string>
    <string name="change_password_profile">Change password</string>
    <string name="settings_content_description_profile">Go to settings</string>

    <!-- Dialog -->
    <string name="new_claim_dialog">New Claim</string>
    <string name="replace_claim_dialog">Replace claim</string>

    <!-- ChangePasswordFragment -->
    <string name="change_password_change_password">Change</string>
    <string name="type_a_new_password_change_password">Type a new password</string>
    <string name="confirm_the_new_password_change_password">Confirm the new password</string>
    <string name="action_bar_title_change_password">Change Password</string>

    <!-- ViewPager2 -->
    <string name="new_claim_description">1. Description</string>
    <string name="new_claim_intro_description">1. Description</string>
    <string name="new_claim_photo_title">2. Photo</string>
    <string name="new_claim_location_title">3. Location</string>
    <string name="new_claim_location_button_text">My Location</string>
    <string name="new_claim_location_search">Search here</string>
    <string name="new_claim_summary_title">Summary</string>
    <string name="new_claim_description_write_about">Write about…</string>
    <string name="new_claim_photo_pick_image">Pick image</string>
    <string name="new_claim_photo_camera">Take photo</string>

    <string name="back_text_button">Back</string>
    <string name="next_text_button">Next</string>
    <string name="finish_text_button">Finish</string>

    <!-- Cards (claims) in RecyclerView -->
    <string name="claim_card_title">Title</string>
    <string name="claim_card_description">Description</string>
    <string name="claim_card_photo">Photo</string>
    <string name="claim_card_location">Location</string>
    <string name="claim_card_status">Status</string>
    <string name="claim_image_contentDescription">Image from claim</string>
    <string name="claim_card_replace_button_text">Replace</string>
    <string name="claim_card_see_details_button_text">See details</string>
    <string name="claim_card_delete_button_text">Delete</string>

    <!-- BottomNavigation -->
    <string name="bottom_navigation_claims">Claims</string>
    <string name="bottom_navigation_map">Map</string>
    <string name="bottom_navigation_profile">Profile</string>

    <!-- Profile -->
    <string name="settings_drawer_profile">Settings</string>
    <string name="change_password_drawer_profile">Change Password</string>
    <string name="logout_drawer_profile">Logout</string>
    <string name="open_menu_profile">Open menu</string>
    <string name="account_menu_item_profile">Account</string>
    <string name="settings_menu_item_profile">Settings</string>

    <!-- Settings -->
    <string name="toggle_app_theme_switch_settings">Toggle Dark Mode</string>
    <string name="toggle_offline_mode_switch_settings">Toggle Offline Mode</string>

    <!-- Claim Details -->
    <string name="claim_details_action_bar_title">Claim Details</string>
    <string name="claim_details_title">Title</string>
    <string name="claim_details_status">Status</string>
    <string name="claim_details_description">Description: </string>
    <string name="claim_details_location">Location</string>

    <!-- Top Bar -->
    <string name="back_arrow_content_description">Back arrow</string>
    <string name="action_bar_title_settings">Settings</string>

</resources>