<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    tools:context=".fragment.ClaimDetailsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/claim_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/claim_details_title"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/claim_details_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim_details_status"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/claim_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/claim_details_description"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/claim_details_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim_details_location"
            android:layout_marginBottom="4dp" />

        <ImageView
            android:id="@+id/claim_details_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:src="@color/blue_variant"
            android:contentDescription="@string/claim_image_contentDescription" />

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>