<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_email_login"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_password_login"
            android:hint="@string/password_login"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/button_txt_login" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="skipLogin"
            android:text="@string/skip_login" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>