<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_existing_insurance_claims_home"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/change_password_profile_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_profile"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/logout_profile_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out_profile" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/menu_button_profile_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_menu_24"
        android:layout_margin="6dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/open_menu_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>