<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp" >

        <TextView
            android:id="@+id/claim_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/claim_details_title"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/claim_details_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/claim_details_description"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/claim_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/claim_details_description"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Location:"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/claim_details_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim_details_location"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Photo:"
            android:layout_marginBottom="4dp" />

        <ImageView
            android:id="@+id/claim_details_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:src="@color/blue_variant"
            android:contentDescription="@string/claim_image_contentDescription" />

    </TableLayout>

</ScrollView>