<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".fragment.ChangePasswordFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/editText_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/type_a_new_password_change_password"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/editText_confirm_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/confirm_the_new_password_change_password"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_marginBottom="4dp" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_change_password" />

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>